src/objects/Action__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>SRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nokia_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nokia User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Actions_Status_Overview</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>CASE( Score__c ,
1 ,IMAGE(&apos;/img/samples/light_green.gif&apos;, &apos;green&apos;),
0,IMAGE(&apos;/img/samples/light_yellow.gif&apos;, &apos;yellow&apos;) ,
2 ,IMAGE(&apos;/img/samples/light_red.gif&apos;, &apos;red&apos;),
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>IF ( ISPICKVAL(Status__c, &apos;Close&apos;) , 1,
IF (AND (ISPICKVAL(Status__c, &apos;Open&apos;) , ((Due_Date__c - TODAY())) &gt;2), 0,
IF (AND (ISPICKVAL(Status__c, &apos;Open&apos;) , ((Due_Date__c - TODAY())) &lt;2), 2, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <label>Supplier Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supplier_Responsible__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supplier Responsible</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>StakeHolder_Matrix_Supplier_contacts__c.SupplierName__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Supplier_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>StakeHolder_Matrix_Supplier_contacts__c</referenceTo>
        <relationshipLabel>Actions &amp; Status Overview</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Action &amp; Status Overview</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions &amp; Status Overview</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Due_date_cannot_be_in_past</fullName>
        <active>true</active>
        <errorConditionFormula>Due_Date__c  &lt;=  TODAY()</errorConditionFormula>
        <errorMessage>Due Date cannot be in past</errorMessage>
    </validationRules>
</CustomObject>